<resources>
    <string name="app_name">Calculator Mark 1</string>
    <string name="resultPreview">Result Preview</string>
    <string name="expression">Expression</string>
    <string name="error">Error</string>
    <string name="btn7">7</string>
    <string name="btn4">4</string>
    <string name="btn1">1</string>
    <string name="btnSeparator">.</string>
    <string name="btn5">5</string>
    <string name="btn8">8</string>
    <string name="btn2">2</string>
    <string name="btn0">0</string>
    <string name="btn9">9</string>
    <string name="btn6">6</string>
    <string name="btn3">3</string>
    <string name="btnCalculate">=</string>
    <string name="btnDelete">Del</string>
    <string name="btnDiv">/</string>
    <string name="btnMul">*</string>
    <string name="btnSub">-</string>
    <string name="btnAdd">+</string>


</resources>
