<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/DisplayBlock">

        <TextView
            android:id="@+id/expression"
            style="@style/Text.Expression"
            android:text="@string/expression" />

        <TextView
            android:id="@+id/resultPreview"
            style="@style/Text.ResultPreview"
            android:text="@string/resultPreview" />
    </LinearLayout>

    <LinearLayout
        style="@style/CalculatorBlock">

        <LinearLayout
            style="@style/CalculatorButtonBlock.Numbers">

            <Button
                android:id="@+id/btn7"
                style="@style/CalculatorButton.Number"
                android:text="@string/btn7" />

            <Button
                android:id="@+id/btn4"
                style="@style/CalculatorButton.Number"
                android:text="@string/btn4" />

            <Button
                android:id="@+id/btn1"
                style="@style/CalculatorButton.Number"
                android:text="@string/btn1" />

            <Button
                android:id="@+id/btnSeparator"
                style="@style/CalculatorButton.Number"
                android:text="@string/btnSeparator" />
        </LinearLayout>

        <LinearLayout
            style="@style/CalculatorButtonBlock.Numbers">

            <Button
                android:id="@+id/btn8"
                style="@style/CalculatorButton.Number"
                android:text="@string/btn8" />

            <Button
                android:id="@+id/btn5"
                style="@style/CalculatorButton.Number"
                android:text="@string/btn5" />

            <Button
                android:id="@+id/btn2"
                style="@style/CalculatorButton.Number"
                android:text="@string/btn2" />

            <Button
                android:id="@+id/btn0"
                style="@style/CalculatorButton.Number"
                android:text="@string/btn0" />
        </LinearLayout>

        <LinearLayout
            style="@style/CalculatorButtonBlock.Numbers">

            <Button
                android:id="@+id/btn9"
                style="@style/CalculatorButton.Number"
                android:text="@string/btn9" />

            <Button
                android:id="@+id/btn6"
                style="@style/CalculatorButton.Number"
                android:text="@string/btn6" />

            <Button
                android:id="@+id/btn3"
                style="@style/CalculatorButton.Number"
                android:text="@string/btn3" />

            <Button
                android:id="@+id/btnCalculate"
                style="@style/CalculatorButton.Number"
                android:text="@string/btnCalculate" />
        </LinearLayout>

        <LinearLayout
            style="@style/CalculatorButtonBlock.Operations">

            <Button
                android:id="@+id/btnDelete"
                style="@style/CalculatorButton.Operation"
                android:text="@string/btnDelete" />

            <Button
                android:id="@+id/btnDiv"
                style="@style/CalculatorButton.Operation"
                android:text="@string/btnDiv" />

            <Button
                android:id="@+id/btnMul"
                style="@style/CalculatorButton.Operation"
                android:text="@string/btnMul" />

            <Button
                android:id="@+id/btnSub"
                style="@style/CalculatorButton.Operation"
                android:text="@string/btnSub" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/CalculatorButton.Operation"
                android:text="@string/btnAdd" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
